Activate initial loading of data

--- a/app/travellist/webapp/manifest.json
+++ b/app/travellist/webapp/manifest.json
@@ -133,7 +133,8 @@
                                         "route": "TravelObjectPage"
                                     }
                                 }
-                            }
+                            },
+                            "initialLoad": "Enabled"
                         }
                     },
                     "controlAggregation": "beginColumnPages",
