--- a/app/travellist/package.json
+++ b/app/travellist/package.json
@@ -9,19 +9,21 @@
 		"sapui5"
 	],
 	"main": "webapp/index.html",
-	"dependencies": {},
 	"devDependencies": {
-		"@ui5/cli": "^2.14.1",
-		"@sap/ux-ui5-tooling": "1",
-		"@sap/ux-specification": "UI5-1.108",
 		"@sap-ux/ui5-middleware-fe-mockserver": "2",
+		"@sap/ui5-builder-webide-extension": "^1.1.9",
+		"@sap/ux-specification": "UI5-1.108",
+		"@sap/ux-ui5-tooling": "1",
+		"@ui5/cli": "^2.14.1",
 		"rimraf": "^3.0.2",
-		"ui5-task-flatten-library": "0.2.5"
+		"ui5-task-flatten-library": "0.2.5",
+		"ui5-task-zipper": "^0.7.4"
 	},
 	"scripts": {
 		"start": "fiori run --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#comjhodelraptravellist-tile\"",
 		"start-local": "fiori run --config ./ui5-local.yaml --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#comjhodelraptravellist-tile\"",
 		"build": "ui5 build --config=ui5.yaml --clean-dest --dest dist",
+		"build:cf": "ui5 build preload --clean-dest --config ui5-deploy-cf.yaml --include-task=generateManifestBundle generateCachebusterInfo",
 		"deploy": "npm run build && fiori deploy --config ui5-deploy.yaml && rimraf archive.zip",
 		"deploy-config": "fiori add deploy-config",
 		"start-noflp": "fiori run --open \"index.html?sap-ui-xx-viewCache=false\"",
@@ -35,6 +37,8 @@
 		"dependencies": [
 			"@sap/ux-ui5-tooling",
 			"@sap-ux/ui5-middleware-fe-mockserver",
+			"@sap/ui5-builder-webide-extension",
+			"ui5-task-zipper",
 			"ui5-task-flatten-library"
 		]
 	},
